<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".WorkManagerActivity">

    <Button
        android:enabled="true"
        android:id="@+id/buttonWorkerSampleToast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/worker_toast"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/buttonWorkerSampleAfterTwoSeconds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/worker_after_twoseconds"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/buttonWorkerSampleToast"
        tools:layout_editor_absoluteX="10dp" />
    <Button
        android:id="@+id/buttonWorkerSampleCancelAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_cancel_if_double_clicked"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/buttonWorkerSampleAfterTwoSeconds"
        tools:layout_editor_absoluteX="10dp" />

    <Button
        android:id="@+id/buttonWorkerSampleEventUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/provide_sample_event_update"
        app:layout_constraintTop_toBottomOf="@+id/buttonWorkerSampleCancelAll"
        tools:layout_editor_absoluteX="10dp" />

    <Button
        android:id="@+id/buttonWorkerSampleEventCancelAndRestart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/provide_sample_event_update_relaunch"
        app:layout_constraintTop_toBottomOf="@+id/buttonWorkerSampleEventUpdate"
        tools:layout_editor_absoluteX="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>